@startuml

title __MCR_LABO1C's Class Diagram__\n

  package Bouncer {
    interface Bouncable {
    }
  }
  

  package Bouncer {
    class BounceApp {
    }
  }
  

  package Bouncer {
    abstract class Bouncer {
    }
  }
  

  package Displayer {
    class BouncerDisplayer {
    }
  }
  

  package Factory {
    abstract class BouncerFactory {
    }
  }
  

  package Renderer {
    abstract class BouncerRenderer {
    }
  }
  

  package Bouncer {
    abstract class Circle {
    }
  }
  

  package Displayer {
    interface Displayer {
    }
  }
  

  package Factory {
    class EmptyBouncerFactory {
    }
  }
  

  package Renderer {
    class EmptyRenderer {
    }
  }
  

  package Factory {
    class FilledBouncerFactory {
    }
  }
  

  package Renderer {
    class FilledRenderer {
    }
  }
  

  package Renderer {
    interface Renderable {
    }
  }
  

  package Bouncer {
    abstract class Square {
    }
  }
  

  BounceApp o-- Displayer : displayer
  Bouncer -up-|> Bouncable
  BouncerDisplayer -up-|> Displayer
  BouncerRenderer -up-|> Renderable
  Circle -up-|> Bouncer
  EmptyBouncerFactory -up-|> BouncerFactory
  EmptyRenderer -up-|> BouncerRenderer
  FilledBouncerFactory -up-|> BouncerFactory
  FilledRenderer -up-|> BouncerRenderer
  Square -up-|> Bouncer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
